--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,9 @@
   },
   "dependencies": {
     "@mdi/font": "7.0.96",
+    "@tailwindcss/vite": "^4.0.0",
     "roboto-fontface": "*",
+    "tailwindcss": "^4.0.0",
     "vue": "^3.3.0",
     "vuetify": "^3.0.0"
   },
